Block intentionally so that trace id is properly propagated and add opentelemetry-exporter-zipkin for local dev